# novo-deploy

./: pyproject.toml
app/: admin.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_item.py  0003_alter_customuser_email.py
app/templates/: base.html  change_password.html  items.html  login.html  logout.html  profile.html  register.html
app/tests/app/: test_views.py
meu_projeto/: settings.py  urls.py
